--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "flatpickr": "^4.6.13",
     "mapbox-gl": "^2.8.2",
+    "react_ujs": "^2.6.2",
     "stimulus": "^3.0.1",
     "stimulus-carousel": "^4.0.0",
     "swiper": "^8.2.4",
