--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mapbox-gl": "^2.8.2",
     "stimulus": "^3.0.1",
     "stimulus-carousel": "^4.0.0",
-    "swiper": "^8.3.1",
+    "swiper": "6.8.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
